add skip step functionality + autocomplete + bugs